# geomodeltools

./: .gitignore  README.md  pyproject.toml
src/geomodeltools/: __init__.py  _config.py  dem.py  geometry.py
